# ncu-regulation-kg

./: .gitignore  Assignment-4.md  README.md  build_kg.py  llm_loader.py  main.py  pyproject.toml  query_system.py
